database and host img updated

--- a/resources/online/dwViews/game.html
+++ b/resources/online/dwViews/game.html
@@ -176,7 +176,7 @@
                 <h3 id="humanPlayerName" class="playerName"></h3>
                 <h5 id="numOfCard_human" class="numOfCard"></h5>
                 <div id="cardYou" class="card" style="display: block;">
-                    <img src="https://i.ibb.co/BLynzd4/dreepy.png" alt=""></img>
+                    <img src="/assets/dreepy.png" alt=""></img>
                     <h5 id="cardName_human"></h5>
                     <table id="humanPlayer"> </table>
                 </div>
